--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ branches:
 osx_image: xcode8
 language: objective-c
 xcode_project: SWCompression.xcodeproj
-xcode_scheme: SWCompressionTests
+xcode_scheme: SWCompression
 script:
-- xcodebuild clean build test -project SWCompression.xcodeproj -scheme SWCompressionTests
+- xcodebuild clean build test -project SWCompression.xcodeproj -scheme SWCompression
+notifications:
+  email: false
