--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,8 @@ before_deploy:
 - carthage archive $FRAMEWORK_NAME
 script:
 - xcodebuild clean build test -project SWCompression.xcodeproj -scheme SWCompression
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
 notifications:
   email: false
 deploy:
