XZ files are now in git lfs.

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 *.bz2 filter=lfs diff=lfs merge=lfs -text
 *.deflate filter=lfs diff=lfs merge=lfs -text
 *.answer filter=lfs diff=lfs merge=lfs -text
+*.xz filter=lfs diff=lfs merge=lfs -text
