--- a/.jazzy.yaml
+++ b/.jazzy.yaml
@@ -4,9 +4,9 @@ exclude: Tests/
 swift_version: 3.0.2
 author: Timofey Solomko
 module: SWCompression
-module_version: 2.1.0-test
+module_version: 2.1.0-test2
 copyright: '© 2017 Timofey Solomko'
 readme: README.md
 github_url: https://github.com/tsolomko/SWCompression
-github_file_prefix: https://github.com/tsolomko/SWCompression/tree/v2.1.0-test
+github_file_prefix: https://github.com/tsolomko/SWCompression/tree/v2.1.0-test2
 theme: fullwidth
