Moved filter_test script and updated .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
 
 ## Custom
-Tests/Results/temp
+Tests/temp
 
 ## Build generated
 build/
@@ -66,4 +66,3 @@ fastlane/report.xml
 fastlane/Preview.html
 fastlane/screenshots
 fastlane/test_output
-
