--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,4 @@
 *.answer filter=lfs diff=lfs merge=lfs -text
 *.xz filter=lfs diff=lfs merge=lfs -text
 *.zip filter=lfs diff=lfs merge=lfs -text
+*.tar filter=lfs diff=lfs merge=lfs -text
