--- a/.jazzy.yaml
+++ b/.jazzy.yaml
@@ -3,9 +3,9 @@ clean: true
 exclude: Tests/
 author: Timofey Solomko
 module: SWCompression
-module_version: 3.0.1
+module_version: 3.1.0-test
 copyright: '© 2017 Timofey Solomko'
 readme: README.md
 github_url: https://github.com/tsolomko/SWCompression
-github_file_prefix: https://github.com/tsolomko/SWCompression/tree/v3.0.1
+github_file_prefix: https://github.com/tsolomko/SWCompression/tree/v3.1.0-test
 theme: fullwidth
