--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,8 @@ before_install:
 - brew install git-lfs
 - git lfs install
 before_script:
+- git submodule update --init --recursive
+- cd Tests/Test\ Files
 - git lfs pull
 before_deploy:
 - carthage build --no-skip-current
