--- a/.jazzy.yaml
+++ b/.jazzy.yaml
@@ -3,11 +3,11 @@ clean: true
 exclude: Tests/
 author: Timofey Solomko
 module: SWCompression
-module_version: 3.2.0-test
+module_version: 3.2.0
 copyright: '© 2017 Timofey Solomko'
 readme: README.md
 github_url: https://github.com/tsolomko/SWCompression
-github_file_prefix: https://github.com/tsolomko/SWCompression/tree/v3.2.0-test
+github_file_prefix: https://github.com/tsolomko/SWCompression/tree/v3.2.0
 theme: fullwidth
 
 custom_categories:
