--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@
 env:
   global:
   - FRAMEWORK_NAME=SWCompression
+  - CC_TEST_REPORTER_ID=87379ba4ed4c1c2f6cd9ab95560364759898a0902effca0c23eddfc16a9ff5ff
+  - GIT_COMMITTED_AT=$(if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then git log -1 --pretty=format:%ct; else git log -1 --skip 1 --pretty=format:%ct; fi)
 matrix:
     include:
     - language: objective-c
@@ -17,13 +19,16 @@ matrix:
       - cd Tests/Test\ Files
       - git lfs pull
       - cd ../..
+      - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+      - chmod +x ./cc-test-reporter
+      - ./cc-test-reporter before-build
       before_deploy:
       - carthage build --no-skip-current
       - carthage archive $FRAMEWORK_NAME
       script:
       - xcodebuild clean build test -project SWCompression.xcodeproj -scheme SWCompression
       after_success:
-      - bash <(curl -s https://codecov.io/bash)
+      - if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT; fi
       deploy:
         provider: releases
         api_key:
