--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,6 @@ env:
   global:
   - FRAMEWORK_NAME=SWCompression
   - CC_TEST_REPORTER_ID=87379ba4ed4c1c2f6cd9ab95560364759898a0902effca0c23eddfc16a9ff5ff
-  - GIT_COMMITTED_AT=$(if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then git log -1 --pretty=format:%ct; else git log -1 --skip 1 --pretty=format:%ct; fi)
 matrix:
     include:
     - language: objective-c
@@ -12,7 +11,8 @@ matrix:
       before_install:
       - gem install slather
       - brew update
-      - brew upgrade carthage
+      # `brew outdated` is necessary to prevent build error when there is no updates for Carthage.
+      - brew outdated carthage || brew upgrade carthage
       - brew install git-lfs
       - git lfs install
       before_script:
