Ignore Package.resolved

--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,6 @@ fastlane/test_output
 
 # Ignore symbolic link to swcomp executable built by SPM.
 swcomp
+
+# Ignore Package.resolved, because there is no dependencies by default for this package.
+Package.resolved
