--- a/.jazzy.yaml
+++ b/.jazzy.yaml
@@ -3,11 +3,11 @@ clean: true
 exclude: Tests/
 author: Timofey Solomko
 module: SWCompression
-module_version: 4.0.1
+module_version: 4.0.2-dev
 copyright: '© 2017 Timofey Solomko'
 readme: README.md
 github_url: https://github.com/tsolomko/SWCompression
-github_file_prefix: https://github.com/tsolomko/SWCompression/tree/4.0.1
+github_file_prefix: https://github.com/tsolomko/SWCompression/tree/develop
 theme: fullwidth
 
 custom_categories:
