Multiple updates to Xcode projects/workspace
Use recommended settings for TestSWCompression; move SWCompression above TestSWCompression in workspace; remove internal workspace from SWCompression; remove platform-specific schemes and targets from SWCompression; enable support for all Darwin platforms in one target/scheme; set deployment targets as minimal as possible; set correct rpath for TestSWCompression; remove unwanted files from TestSWCompression; reorder files in TestSWCompression; add correct test action to SWCompression scheme; remove code-signing.

--- a/SWCompression.xcodeproj/xcshareddata/xcschemes/SWCompression.xcscheme
+++ b/SWCompression.xcodeproj/xcshareddata/xcschemes/SWCompression.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0900"
+   LastUpgradeVersion = "0920"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -29,6 +29,16 @@
       language = ""
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "061FFDC01FEC163A00029440"
+               BuildableName = "TestSWCompression.xctest"
+               BlueprintName = "TestSWCompression"
+               ReferencedContainer = "container:TestSWCompression.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
