Multiple updates to CI configuration
Use single GitHub OAuth Token; update Xcode version to 9.2; upgrade Carthage in before_deploy step; use SourceKitten to generate docs; enable email notifications; use default xctool; build and test every supported plaatform on osx; use workspace instead of project.

--- a/.jazzy.yaml
+++ b/.jazzy.yaml
@@ -1,6 +1,6 @@
-output: docs/
+# Run: sourcekitten doc --spm-module SWCompression > docs.json
+sourcekitten_sourcefile: docs.json
 clean: true
-exclude: Tests/
 author: Timofey Solomko
 module: SWCompression
 module_version: 4.0.2-dev
