Several modifications to xcode projects
Organization name set to "Timofey Solomko"; reset some settings to its default values; remove separate test project and workspace by merging them into main project; move plist files inside xcode project; use project-wide settings as much as possible; set project version 50 (total amount of releases on github) and CFBundleShortVersion to 4.0.1; versions in xcode project are now managed by agvtool: project version is increased by 1 whenever there is a new release, CFBundleShortVersion will continue to be semantically versioned; remove some unused settings; remove header file and empty build phases.

--- a/SWCompression.xcodeproj/xcshareddata/xcschemes/SWCompression.xcscheme
+++ b/SWCompression.xcodeproj/xcshareddata/xcschemes/SWCompression.xcscheme
@@ -33,10 +33,10 @@
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "061FFDC01FEC163A00029440"
+               BlueprintIdentifier = "06F065941FFB761600312A82"
                BuildableName = "TestSWCompression.xctest"
                BlueprintName = "TestSWCompression"
-               ReferencedContainer = "container:TestSWCompression.xcodeproj">
+               ReferencedContainer = "container:SWCompression.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
