--- a/.jazzy.yaml
+++ b/.jazzy.yaml
@@ -3,11 +3,11 @@ sourcekitten_sourcefile: docs.json
 clean: true
 author: Timofey Solomko
 module: SWCompression
-module_version: 4.0.2-dev
+module_version: 4.1.0-test.1
 copyright: '© 2018 Timofey Solomko'
 readme: README.md
 github_url: https://github.com/tsolomko/SWCompression
-github_file_prefix: https://github.com/tsolomko/SWCompression/tree/develop
+github_file_prefix: https://github.com/tsolomko/SWCompression/tree/4.1.0-test.1
 theme: fullwidth
 
 custom_categories:
