Swiftlinted with two new rules

--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -9,6 +9,7 @@ opt_in_rules:
   - conditional_returns_on_newline
   - contains_over_first_not_nil
   - discouraged_direct_init
+  - discouraged_object_literal
   - explicit_init
   - fatal_error_message
   - first_where
@@ -25,3 +26,4 @@ opt_in_rules:
   - strict_fileprivate
   - switch_case_on_newline
   - trailing_closure
+  - yoda_condition
