Enable/disable a couple of swiftlint rules
identifier_name was disabled, because we have a number of properties which violate this rule, but cannot be renamed for various reasons (e.g. "id" in SevenZip...).

--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -4,6 +4,7 @@ disabled_rules:
   - cyclomatic_complexity
   - file_length
   - function_body_length
+  - identifier_name
   - type_body_length
 opt_in_rules:
   - array_init
@@ -12,6 +13,7 @@ opt_in_rules:
   - contains_over_first_not_nil
   - discouraged_direct_init
   - discouraged_object_literal
+  - discouraged_optional_boolean
   - explicit_init
   - fatal_error_message
   - first_where
