--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -3,6 +3,7 @@ excluded:
 disabled_rules:
   - cyclomatic_complexity
   - file_length
+  - for_where
   - function_body_length
   - identifier_name
   - type_body_length
