--- a/.jazzy.yaml
+++ b/.jazzy.yaml
@@ -3,11 +3,11 @@ sourcekitten_sourcefile: docs.json
 clean: true
 author: Timofey Solomko
 module: SWCompression
-module_version: 4.4.0-test
+module_version: 4.4.0
 copyright: '© 2018 Timofey Solomko'
 readme: README.md
 github_url: https://github.com/tsolomko/SWCompression
-github_file_prefix: https://github.com/tsolomko/SWCompression/tree/4.4.0-test
+github_file_prefix: https://github.com/tsolomko/SWCompression/tree/4.4.0
 theme: fullwidth
 
 custom_categories:
