--- a/.jazzy.yaml
+++ b/.jazzy.yaml
@@ -3,11 +3,11 @@ sourcekitten_sourcefile: docs.json
 clean: true
 author: Timofey Solomko
 module: SWCompression
-module_version: 4.5.2
+module_version: 4.5.3-test
 copyright: '© 2020 Timofey Solomko'
 readme: README.md
 github_url: https://github.com/tsolomko/SWCompression
-github_file_prefix: https://github.com/tsolomko/SWCompression/tree/4.5.2
+github_file_prefix: https://github.com/tsolomko/SWCompression/tree/4.5.3-test
 theme: fullwidth
 
 custom_categories:
