--- a/SWCompression.xcodeproj/SWCompression.plist
+++ b/SWCompression.xcodeproj/SWCompression.plist
@@ -15,9 +15,9 @@
 	<key>CFBundlePackageType</key>
 	<string>FMWK</string>
 	<key>CFBundleShortVersionString</key>
-	<string>4.5.2</string>
+	<string>4.5.3-test</string>
 	<key>CFBundleVersion</key>
-	<string>68</string>
+	<string>69</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2020 Timofey Solomko. All rights reserved.</string>
 </dict>
