--- a/SWCompression.xcodeproj/TestSWCompression.plist
+++ b/SWCompression.xcodeproj/TestSWCompression.plist
@@ -15,8 +15,8 @@
 	<key>CFBundlePackageType</key>
 	<string>BNDL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>4.5.2</string>
+	<string>4.5.3-test</string>
 	<key>CFBundleVersion</key>
-	<string>68</string>
+	<string>69</string>
 </dict>
 </plist>
