--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ jobs:
       install:
       - ./utils.py ci install-macos
       before_script:
-      - Utils/prepare-workspace-macos.sh
+      - ./utils.py prepare-workspace macos
       script:
       - ./utils.py ci script-macos
     - stage: test
@@ -28,7 +28,7 @@ jobs:
       install:
       - ./utils.py ci install-macos
       before_script:
-      - Utils/prepare-workspace-macos.sh
+      - ./utils.py prepare-workspace macos
       script:
       - ./utils.py ci script-macos
     - stage: test
@@ -63,8 +63,8 @@ jobs:
       - >
         if ! [ "$BEFORE_DEPLOY_RUN" ]; then
           export BEFORE_DEPLOY_RUN=1;
-          Utils/prepare-workspace-macos.sh -T;
-          - ./utils.py ci before-deploy;
+          ./utils.py prepare-workspace macos -T
+          ./utils.py ci before-deploy;
         fi
       deploy:
       - provider: releases
