--- a/.travis.yml
+++ b/.travis.yml
@@ -54,7 +54,7 @@ jobs:
       env:
       - SWIFT_VERSION=5.0
       install:
-      - eval "$(curl -sL https://swiftenv.fuller.li/install.sh)"
+      - ./utils.py ci install-linux
       script:
       - ./utils.py ci script-linux
     - stage: test
@@ -64,7 +64,7 @@ jobs:
       env:
       - SWIFT_VERSION=5.1
       install:
-      - eval "$(curl -sL https://swiftenv.fuller.li/install.sh)"
+      - ./utils.py ci install-linux
       script:
       - ./utils.py ci script-linux
     - stage: test
@@ -74,7 +74,7 @@ jobs:
       env:
       - SWIFT_VERSION=5.2
       install:
-      - eval "$(curl -sL https://swiftenv.fuller.li/install.sh)"
+      - ./utils.py ci install-linux
       script:
       - ./utils.py ci script-linux
     - stage: deploy
