CI changes: use ubuntu-18.04 on travis; run azp on all branches except master; don't use xcpretty and don't install it; remove azp-specific utils commands; set some env vars via os python module in utils.py to fix swift on linux issues; use -quiet argument for xcode to fix travis log length issues; remove verbosity from ci install linux step

--- a/.travis.yml
+++ b/.travis.yml
@@ -50,7 +50,7 @@ jobs:
     - stage: test
       language: generic
       os: linux
-      dist: xenial
+      dist: bionic
       env:
       - SWIFT_VERSION=5.0
       install:
@@ -60,7 +60,7 @@ jobs:
     - stage: test
       language: generic
       os: linux
-      dist: xenial
+      dist: bionic
       env:
       - SWIFT_VERSION=5.1
       install:
@@ -70,7 +70,7 @@ jobs:
     - stage: test
       language: generic
       os: linux
-      dist: xenial
+      dist: bionic
       env:
       - SWIFT_VERSION=5.2
       install:
