--- a/.travis.yml
+++ b/.travis.yml
@@ -58,7 +58,14 @@ jobs:
       install:
       - ./utils.py ci install-macos
       before_script:
-      - ./utils.py prepare-workspace macos
+      # - ./utils.py prepare-workspace macos
+      # TODO: Remove lines below when Carthage gets a workaround for problems with Xcode 12
+      - xcconfig=$(mktemp /tmp/static.xcconfig.XXXXXX)
+      - trap 'rm -f "$xcconfig"' INT TERM HUP EXIT
+      - echo 'EXCLUDED_ARCHS__EFFECTIVE_PLATFORM_SUFFIX_simulator__NATIVE_ARCH_64_BIT_x86_64__XCODE_1200 = arm64 arm64e armv7 armv7s armv6 armv8' >> $xcconfig
+      - echo 'EXCLUDED_ARCHS = $(inherited) $(EXCLUDED_ARCHS__EFFECTIVE_PLATFORM_SUFFIX_$(EFFECTIVE_PLATFORM_SUFFIX)__NATIVE_ARCH_64_BIT_$(NATIVE_ARCH_64_BIT)__XCODE_$(XCODE_VERSION_MAJOR))' >> $xcconfig
+      - export XCODE_XCCONFIG_FILE="$xcconfig"
+      - carthage bootstrap
       script:
       - ./utils.py ci script-macos
     - stage: test
