--- a/.travis.yml
+++ b/.travis.yml
@@ -50,7 +50,7 @@ jobs:
     - stage: test
       language: swift
       os: osx
-      osx_image: xcode12 # Swift 5.3
+      osx_image: xcode12.3 # Swift 5.3
       env:
       - HOMEBREW_NO_INSTALL_CLEANUP=1
       before_install:
@@ -66,7 +66,7 @@ jobs:
       os: linux
       dist: bionic
       env:
-      - SWIFT_VERSION=5.0
+      - SWIFT_VERSION=5.0.3
       install:
       - ./utils.py ci install-linux
       script:
@@ -76,7 +76,7 @@ jobs:
       os: linux
       dist: bionic
       env:
-      - SWIFT_VERSION=5.1
+      - SWIFT_VERSION=5.1.5
       install:
       - ./utils.py ci install-linux
       script:
@@ -86,7 +86,7 @@ jobs:
       os: linux
       dist: bionic
       env:
-      - SWIFT_VERSION=5.2
+      - SWIFT_VERSION=5.2.5
       install:
       - ./utils.py ci install-linux
       script:
@@ -94,9 +94,9 @@ jobs:
     - stage: test
       language: generic
       os: linux
-      dist: xenial
+      dist: focal
       env:
-      - SWIFT_VERSION=5.3
+      - SWIFT_VERSION=5.3.2
       install:
       - eval "$(curl -sL https://swiftenv.fuller.li/install.sh)"
       script:
