--- a/.travis.yml
+++ b/.travis.yml
@@ -48,6 +48,7 @@ jobs:
       script:
       - ./utils.py ci script-macos
     - stage: test
+      # TODO: Remove this stage when the non-xcf installation method with Carthage is no longer supported.
       language: swift
       os: osx
       osx_image: xcode12 # Swift 5.3
@@ -58,14 +59,34 @@ jobs:
       install:
       - ./utils.py ci install-macos
       before_script:
-      # - ./utils.py prepare-workspace macos
-      # TODO: Remove lines below when Carthage gets a workaround for problems with Xcode 12
       - xcconfig=$(mktemp /tmp/static.xcconfig.XXXXXX)
       - trap 'rm -f "$xcconfig"' INT TERM HUP EXIT
       - echo 'EXCLUDED_ARCHS__EFFECTIVE_PLATFORM_SUFFIX_simulator__NATIVE_ARCH_64_BIT_x86_64__XCODE_1200 = arm64 arm64e armv7 armv7s armv6 armv8' >> $xcconfig
       - echo 'EXCLUDED_ARCHS = $(inherited) $(EXCLUDED_ARCHS__EFFECTIVE_PLATFORM_SUFFIX_$(EFFECTIVE_PLATFORM_SUFFIX)__NATIVE_ARCH_64_BIT_$(NATIVE_ARCH_64_BIT)__XCODE_$(XCODE_VERSION_MAJOR))' >> $xcconfig
       - export XCODE_XCCONFIG_FILE="$xcconfig"
       - carthage bootstrap
+      - git submodule update --init --recursive
+      - cp -f Tests/Test Files/gitattributes-copy Tests/Test Files/.gitattributes
+      - cd Tests/Test Files/
+      - git lfs pull
+      - git lfs checkout
+      - cd -
+      script:
+      - ./utils.py ci script-macos
+    - stage: test
+      language: swift
+      os: osx
+      osx_image: xcode12.4 # Swift 5.3.2
+      env:
+      - HOMEBREW_NO_INSTALL_CLEANUP=1
+      before_install:
+      - brew update
+      install:
+      - ./utils.py ci install-macos
+      before_script:
+      # TODO: Move this line into ./utils.py prepare-workspace macos when the old Swift versions and non-xcf installation
+      #  method with Carthage are no longer supported.
+      - carthage bootstrap --use-xcframeworks --no-use-binaries
       - git submodule update --init --recursive
       - cp -f Tests/Test Files/gitattributes-copy Tests/Test Files/.gitattributes
       - cd Tests/Test Files/
