--- a/.travis.yml
+++ b/.travis.yml
@@ -66,8 +66,8 @@ jobs:
       - export XCODE_XCCONFIG_FILE="$xcconfig"
       - carthage bootstrap
       - git submodule update --init --recursive
-      - cp -f Tests/Test Files/gitattributes-copy Tests/Test Files/.gitattributes
-      - cd Tests/Test Files/
+      - cp "Tests/Test Files/gitattributes-copy" "Tests/Test Files/.gitattributes"
+      - cd "Tests/Test Files/"
       - git lfs pull
       - git lfs checkout
       - cd -
@@ -88,8 +88,8 @@ jobs:
       #  method with Carthage are no longer supported.
       - carthage bootstrap --use-xcframeworks --no-use-binaries
       - git submodule update --init --recursive
-      - cp -f Tests/Test Files/gitattributes-copy Tests/Test Files/.gitattributes
-      - cd Tests/Test Files/
+      - cp "Tests/Test Files/gitattributes-copy" "Tests/Test Files/.gitattributes"
+      - cd "Tests/Test Files/"
       - git lfs pull
       - git lfs checkout
       - cd -
