--- a/.travis.yml
+++ b/.travis.yml
@@ -167,6 +167,8 @@ jobs:
       - ./utils.py ci before-deploy
       deploy:
       - provider: pages
-        skip_cleanup: true
         github_token: $GITHUB_TOKEN
         local_dir: docs
+        skip_cleanup: true
+        on:
+          tags: true
