--- a/SWCompression.xcodeproj/SWCompression.plist
+++ b/SWCompression.xcodeproj/SWCompression.plist
@@ -19,6 +19,6 @@
 	<key>CFBundleVersion</key>
 	<string>75</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2021 Timofey Solomko. All rights reserved.</string>
+	<string>Copyright © 2021 Timofey Solomko</string>
 </dict>
 </plist>
